--- a/src/App.css
+++ b/src/App.css
@@ -536,7 +536,7 @@ footer h2 {
   border-radius: 0 0 200px 200px; 
 }
 
-@media only screen and (max-width: 320px) {
+@media only screen and (min-width: 320px) {
   /* Apply styles for screens up to 600 pixels wide (adjust as needed) */
 
   header {
@@ -594,6 +594,17 @@ footer h2 {
     animation: swingAnimation 7s ease-in-out forwards;
   }
   
+  footer {
+    background-color: black;
+    color: white;
+    padding: 10px;
+    position: absolute;
+    top:5800px; 
+    bottom: 0;
+    max-width: 1200px;
+    height: 510px;
+    border-radius: 10px 10px 0 0; 
+  }
   
   .item2 {
     text-align: left;
@@ -722,7 +733,7 @@ footer h2 {
     position: absolute;
     top:5800px; 
     bottom: 0;
-    width: 1440px;
+    max-width: 1440px;
     height: 510px;
     border-radius: 10px 10px 0 0; 
   }
