--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
-* {
+body {
   margin:0; padding:0;
   box-sizing: border-box;
+  font-family: 'Arial', sans-serif;
 }
 header {
   color: rgb(86, 86, 86);
