--- a/src/App.css
+++ b/src/App.css
@@ -381,7 +381,7 @@ header {
 }
 
 /*media query aside css*/
-@media screen and (max-width:320px) {
+@media only screen and (min-width:375px) {
   .aside {
     display: none;
   }
@@ -394,11 +394,10 @@ header {
 
   }
 
-  .front-content {
+.front-content {
     position: absolute;
     width: 100%;
     height: 0%;
-    backface-visibility: hidden;
     background-color: #fff;
     color: #000;
     font-family: 'Arial', sans-serif;
@@ -484,46 +483,6 @@ header {
   }
 }
 
-@media only screen and (max-width:320px) {
-  .ellipse3 {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%;
-    background: linear-gradient(135deg, #FFA500, #8B4513, #FFD700);
-    position: absolute;
-    left: 160px;
-    top: 1200px;
-  }
-
-  .ellipse4 {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: black;
-    position: absolute;
-    left: 160px;
-    top: 1270px;
-    animation: bounceAnimation 2s ease-in-out infinite;
-  }
-
-  @keyframes bounceAnimation {
-
-    0%,
-    20%,
-    50%,
-    80%,
-    100% {
-      transform: translateY(0);
-    }
-
-    40% {
-      transform: translateY(40px);
-    }
-
-    60% {
-      transform: translateY(10px);
-    }
-  }
 @media only screen and (min-width:375px) {
   .ellipse3 {
     width: 100px;
@@ -546,27 +505,11 @@ header {
     animation: bounceAnimation 2s ease-in-out infinite;
   }
 
-  .aside1 {
+  .aside1{
     position: absolute;
-    left: 375px;
-    top: 1000px;
-    font-size: 4em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    top:1100px;
   }
-
-
 }
-  .aside1 {
-    position: absolute;
-    left: 375px;
-    top: 1000px;
-    font-size: 4em;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  }
-
-
-}
-
 
 /*services css*/
 .services {
@@ -731,7 +674,7 @@ header {
   justify-items: left;
 }
 
-@media only screen and (max-width:320px) {
+@media only screen and (min-width:375px) {
   section.services {
     width: 1000px;
     position: absolute;
@@ -794,69 +737,6 @@ header {
   
 }
 
-
-@media only screen and (max-width:375px) {
-  section.services {
-    width: 1000px;
-    position: absolute;
-    left: 80px;
-    top: 1600px;
-  }
-  .ellipse5 {
-    position: absolute;
-    left: 930px;
-  }
-  .article{
-    position: absolute;
-    top:2400px;
-  }
-  section.article,.card1 {
-    position: absolute;
-    width: 350px;
-    height: 200px;
-    left: 80px;
-    top: 2400px;
-    justify-content: center;
-    text-align: left;
-  }
-  
-  
-  .card2 {
-    position: absolute;
-    width: 350px;
-    height: 200px;
-    left: 580px;
-    top: 400px;
-    justify-content: center;
-    text-align: left;
-  }
-  
- 
-  .card3 {
-    position: absolute;
-    width: 350px;
-    height: 200px;
-    left: 80px;
-    top: 800px;
-    justify-content: center;
-    text-align: left;
-  }
-  
-
-  
-  .card4 {
-    position: absolute;
-    width: 350px;
-    height: 200px;
-    left: 580px;
-    top: 800px;
-    justify-content: center;
-    text-align: left;
-  }
-  
- 
-  
-}
 
 
 
@@ -1016,11 +896,11 @@ header {
 }
 
 /**mediaquery for projects and articles*/
-@media only screen and (max-width:320px){
-  .projects {
+@media only screen and (min-width:375px){
+  div.projects {
     position: absolute;
     left: 60px;
-    top: 3600px;
+    top: 3900px;
     width: 500px;
     height: 500px;
     border-radius: 5px;
@@ -1050,10 +930,10 @@ header {
    display: none;
   }
   
-  .article2 {
+  div.article2 {
     position: absolute;
     left: 540px;
-    top: 20px;
+    top: 10px;
     background-color: #fff;
     width: 500px;
     height: 500px;
@@ -1088,77 +968,7 @@ header {
   }
 }
 
-@media only screen and (max-width:375px){
-  .projects {
-    position: absolute;
-    left: 60px;
-    top: 3600px;
-    width: 500px;
-    height: 500px;
-    border-radius: 5px;
-    box-shadow: none;
-    background-color:#fff;
-  }
-  
-  .projects>h2{
-    font-size:55px;
-    position: absolute;
-    left: 90px;
-  }
-  .my-work{
-    font-size: 40px;
-    display: flex;
-  }
 
-  .my-work li{
-    
-    margin-bottom: 35px;
-  }
-  .half-circle3 {
-   display: none;
-  }
-
-  .ellipse10{
-   display: none;
-  }
-  
-  .article2 {
-    position: absolute;
-    left: 540px;
-    top: 20px;
-    background-color: #fff;
-    width: 500px;
-    height: 500px;
-    box-shadow: none;
-  }
-  
-  .article2>h2 {
-    position: absolute;
-    left: 50px;
-    top:1px;
-    font-size: 55px;
-    color:#000;
-  }
-  
-  .articles a {
-    color: #000;
-    font-family: 'Courier New', Courier, monospace;
-   
-  }
-  
-  .articles li {
-    color: #000;
-    list-style: none;
-    margin-bottom: 35px;
-    font-size: 55px;
-  }
-  
-  .articles {
-    position: absolute;
-    top: 120px;
-    left: 10px;
-  }
-}
 @media only screen and (max-width:768px) {
   .projects {
     position: absolute;
